# kepler

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Dockerfile.install  LICENSE  README.md  complex.kepler.yaml  docker-compose.yml  entrypoint.sh  example.kepler.yaml  get-kepler.sh  install.sh  lua.kepler.yaml  test.kepler.yaml
docs/: README.md  hooks.md  (+19 more)
e2e/: Cargo.toml
e2e/config/dependencies_test/: test_chain_dependency.kepler.yaml
e2e/config/environment_test/: test_env_file_loading.kepler.yaml  test_env_priority.kepler.yaml  test_environment_inline.kepler.yaml  test_shell_expansion.kepler.yaml
e2e/config/file_watcher_test/: test_file_watch_debounce.kepler.yaml  test_file_watch_glob_pattern.kepler.yaml  test_file_watch_no_restart_unmatched.kepler.yaml  test_file_watch_triggers_restart.kepler.yaml
e2e/config/healthcheck_test/: test_healthcheck_fails.kepler.yaml  test_healthcheck_passes.kepler.yaml  test_healthcheck_retries.kepler.yaml  test_healthcheck_start_period.kepler.yaml  test_healthcheck_timeout.kepler.yaml
e2e/config/hooks_test/: test_global_on_cleanup_runs.kepler.yaml  test_global_on_init_runs_once.kepler.yaml  test_global_on_start_runs.kepler.yaml  test_global_on_stop_runs.kepler.yaml  test_service_on_exit_runs.kepler.yaml  test_service_on_start_runs.kepler.yaml  test_service_on_stop_runs.kepler.yaml
e2e/config/integration_test/: test_deps_with_healthcheck.kepler.yaml  test_full_lifecycle.kepler.yaml  test_healthcheck_with_hooks.kepler.yaml
e2e/config/logs_test/: test_logs_basic.kepler.yaml  test_logs_filter_by_service.kepler.yaml  test_logs_stderr_captured.kepler.yaml  test_logs_with_timestamps.kepler.yaml
e2e/config/lua_advanced_test/: import_order_tracker.lua  order_tracker.lua  test_lua_block_before_import.kepler.yaml  test_lua_complex_integration.kepler.yaml  test_lua_ctx_granular_env.kepler.yaml  test_lua_depends_on.kepler.yaml  test_lua_env_file_injects_vars.kepler.yaml  test_lua_env_readonly.kepler.yaml  test_lua_execution_order_all_fields.kepler.yaml  test_lua_import_before_block.kepler.yaml  test_lua_multiple_services.kepler.yaml  test_lua_restart_watch.kepler.yaml  test_lua_service_context_in_hooks.kepler.yaml  test_lua_working_dir.kepler.yaml
e2e/config/lua_scripting_test/: test_lua_environment_access.kepler.yaml  test_lua_service_context.kepler.yaml
e2e/config/multi_config_test/: test_configs_isolated_logs_a.kepler.yaml  test_stop_one_keeps_other_a.kepler.yaml  test_stop_one_keeps_other_b.kepler.yaml  test_two_configs_independent_b.kepler.yaml
e2e/config/prune_start_test/: test_multiple_prune_start_cycles.kepler.yaml  test_prune_dry_run_preserves_state.kepler.yaml  test_prune_then_start_logs_work_second.kepler.yaml
e2e/config/restart_policy_test/: test_restart_always_on_failure.kepler.yaml  test_restart_on_failure_exit_1.kepler.yaml
e2e/config/service_lifecycle_test/: test_ps_shows_all_services.kepler.yaml  test_restart_single_service.kepler.yaml  test_start_single_service.kepler.yaml  test_stop_all_services.kepler.yaml  test_stop_single_service.kepler.yaml
e2e/config/shell_expansion_test/: test_command_not_expanded.kepler.yaml  test_healthcheck_not_expanded.kepler.yaml  test_hook_environment_expansion.kepler.yaml  test_working_dir_expansion.kepler.yaml
e2e/config/stop_clean_test/: test_stop_clean_removes_state_directory.kepler.yaml
e2e/config/sys_env_test/: test_cli_env_used_not_daemon.kepler.yaml
e2e/docker/: Dockerfile
e2e/src/: harness.rs  lib.rs
e2e/tests/: daemon_lifecycle_test.rs  dependencies_test.rs  environment_test.rs  file_watcher_test.rs  healthcheck_test.rs  hooks_test.rs  integration_test.rs  lua_advanced_test.rs  lua_scripting_test.rs  sys_env_test.rs
kepler-benchmark/: Cargo.toml
kepler-benchmark/benches/: log_buffer.rs
kepler-benchmark/src/: lib.rs
kepler-cli/: Cargo.toml  README.md
kepler-cli/src/: commands.rs  config.rs  errors.rs  main.rs  tests.rs
kepler-cli/src/ui/: event.rs  mod.rs  terminal.rs  theme.rs
kepler-daemon/: Cargo.toml  README.md
kepler-daemon/src/: acl.rs  allocator.rs  auth.rs  config.rs  config_actor.rs  config_registry.rs  containment.rs  cursor.rs  db_cleanup.rs  deps.rs  env.rs  errors.rs  events.rs  fd_count.rs  hardening.rs  health.rs  hooks.rs  lib.rs  logs.rs  lua_eval.rs  main.rs  monitor.rs  orchestrator.rs  outputs.rs  permissions.rs  persistence.rs  process.rs  query_dsl.rs  restart_coordinator.rs  state.rs  state_actor.rs  token_store.rs  user.rs  watcher.rs
kepler-daemon/src/acl/: tests.rs
kepler-daemon/src/auth/: tests.rs
kepler-daemon/src/config/: deps.rs  duration.rs  expand.rs  expr.rs  health.rs  hooks.rs  logs.rs  lua.rs  mod.rs  resolvable.rs  resources.rs  restart.rs  tests.rs
kepler-daemon/src/config_actor/: actor.rs  command.rs  context.rs  handle.rs  mod.rs
kepler-daemon/src/cursor/: tests.rs
kepler-daemon/src/env/: tests.rs
kepler-daemon/src/events/: tests.rs
kepler-daemon/src/logs/: config.rs  filter.rs  iterator.rs  json_parse.rs  log_reader.rs  log_writer.rs  mod.rs  reader.rs  reverse.rs  store.rs  writer.rs
kepler-daemon/src/lua/: acl_runtime.rs  mod.rs  templating_runtime.rs  vm.rs
kepler-daemon/src/lua_eval/: tests.rs
kepler-daemon/src/monitor/: collector.rs  mod.rs  query.rs  writer.rs
kepler-protocol/: Cargo.toml  README.md
kepler-protocol/src/: client.rs  errors.rs  protocol.rs  server.rs
kepler-tests/: Cargo.toml  README.md
kepler-tests/src/: lib.rs
kepler-tests/tests/: cgroup_tests.rs  config_tests.rs  daemon_tests.rs  env_tests.rs  error_log_tests.rs  expansion_tests.rs  file_change_tests.rs  global_config_tests.rs  health_check_tests.rs  hook_tests.rs  integration_tests.rs  iterator_tests.rs  log_reader_tests.rs  log_retention_tests.rs  log_writer_tests.rs  lua_tests.rs  output_tests.rs  persistence_tests.rs  progress_tests.rs  query_dsl_tests.rs  recreate_tests.rs  resource_cleanup_tests.rs  restart_tests.rs  reverse_reader_tests.rs  security_tests.rs  socket_path_tests.rs  spawn_failure_tests.rs  start_behavior_tests.rs  stress_tests.rs  token_tests.rs  unhandled_failure_tests.rs
(+361 files in other folders)
