[package]
name = "kepler-e2e"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[test]]
name = "stop_clean_test"
path = "tests/stop_clean_test.rs"

[[test]]
name = "prune_start_test"
path = "tests/prune_start_test.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full", "process", "time"] }

# Temporary directories for test isolation
tempfile = "3"

# Binary discovery
which = "6.0"

# Error handling
thiserror = "2.0"

# Async traits
async-trait = "0.1"

[dev-dependencies]
# For test assertions
pretty_assertions = "1.4"
