[package]
name = "kepler-e2e"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[test]]
name = "stop_clean_test"
path = "tests/stop_clean_test.rs"

[[test]]
name = "prune_start_test"
path = "tests/prune_start_test.rs"

[[test]]
name = "daemon_lifecycle_test"
path = "tests/daemon_lifecycle_test.rs"

[[test]]
name = "service_lifecycle_test"
path = "tests/service_lifecycle_test.rs"

[[test]]
name = "dependencies_test"
path = "tests/dependencies_test.rs"

[[test]]
name = "restart_policy_test"
path = "tests/restart_policy_test.rs"

[[test]]
name = "environment_test"
path = "tests/environment_test.rs"

[[test]]
name = "logs_test"
path = "tests/logs_test.rs"

[[test]]
name = "healthcheck_test"
path = "tests/healthcheck_test.rs"

[[test]]
name = "file_watcher_test"
path = "tests/file_watcher_test.rs"

[[test]]
name = "hooks_test"
path = "tests/hooks_test.rs"

[[test]]
name = "lua_scripting_test"
path = "tests/lua_scripting_test.rs"

[[test]]
name = "multi_config_test"
path = "tests/multi_config_test.rs"

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full", "process", "time"] }

# Temporary directories for test isolation
tempfile = "3"

# Binary discovery
which = "6.0"

# Error handling
thiserror = "2.0"

# Async traits
async-trait = "0.1"

[dev-dependencies]
# For test assertions
pretty_assertions = "1.4"
