[package]
name = "kepler-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
kepler-daemon = { path = "../kepler-daemon" }
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
dashmap = "5"
parking_lot = "0.12"
chrono = "0.4"

[[bench]]
name = "log_buffer"
harness = false
