[package]
name = "kepler-daemon"
version.workspace = true
edition = "2024"

[[bin]]
name = "kepler-daemon"
path = "src/main.rs"

[dependencies]
kepler-protocol = { path = "../kepler-protocol" }
tokio = { version = "1.35", features = ["full", "process", "signal", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
chrono = "0.4"
notify = "6.1"
notify-debouncer-mini = "0.4"
globset = "0.4"
shellexpand = "3.1"
dotenvy = "0.15"
mlua = { version = "0.10", features = ["luau", "serialize"] }
dashmap = "5"
futures = "0.3"
tokio-stream = "0.1"
memchr = "2.7"
base64 = "0.22"
sysinfo = "0.37"
tempfile = "3.10"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31.1", features = [
    "user",
    "resource",
    "signal",
    "process",
    "fs",
] }

[dev-dependencies]
