[package]
name = "kepler-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["full", "process", "signal"] }
dashmap = "6.1.0"

# Unix-specific functionality
[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31.1", features = ["user"] }
