[package]
name = "kepler-protocol"
version.workspace = true
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
bincode = "1.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

thiserror = "2.0"

# Async runtime
tokio = { version = "1.35", features = ["full", "process", "signal"] }
dashmap = "6.1.0"

[dev-dependencies]
tempfile = "3.10"

# Unix-specific functionality
[target.'cfg(unix)'.dependencies]
kepler-unix = { path = "../kepler-unix" }
nix = { version = "0.31.1", features = ["user", "fs"] }
